# device_rockchip

./: LICENSE  OAT.xml  README.en.md  README.md  compile.md
common/: BUILD.gn  README.en.md  README.md
hardware/: BUILD.gn  README.en.md  README.zh.md
hardware/display/: BUILD.gn
hardware/display/include/: display_common.h
hardware/display/src/display_device/: drm_connector.cpp  drm_connector.h  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  drm_vsync_worker.h  hdi_composer.cpp  hdi_composer.h  hdi_device_common.h  hdi_device_interface.cpp  hdi_device_interface.h  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_session.cpp  hdi_shared_fd.h
hardware/display/src/display_gfx/: display_gfx.c
hardware/display/src/display_gralloc/: display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.h  hi_gbm.c  hi_gbm.h  hi_gbm_internal.h  hisilicon_drm.h  wayland_drm_auth_client.c  wayland_drm_auth_client.h
hardware/gpu/: BUILD.gn
hardware/isp/: BUILD.gn
hardware/isp/bin64/: ispserver
hardware/mpp/: BUILD.gn
hardware/mpp/include/: mpi_enc_utils.h
hardware/mpp/src/: mpi_enc_utils.c
hardware/rga/: BUILD.gn
hardware/rga/include/: drmrga.h
hardware/wifi/: BUILD.gn  wpa.conf
hardware/wifi/libnl/lib64/libnl/cli/cls/: basic.la  cgroup.la
hardware/wifi/libnl/lib64/libnl/cli/qdisc/: bfifo.la  blackhole.la  fq_codel.la  htb.la  ingress.la  pfifo.la  plug.la
rk3568/: BUILD.gn  README.en.md  README.md  README_zh.md
rk3568/bootanimation/: BUILD.gn  bootanimation-720x1280.raw
rk3568/camera/: BUILD.gn  product.gni
rk3568/camera/include/device_manager/: imx600.h  project_hardware.h  rkispv5.h
rk3568/camera/src/device_manager/: BUILD.gn  imx600.cpp  rkispv5.cpp
rk3568/camera/src/driver_adapter/test/: BUILD.gn
rk3568/camera/src/driver_adapter/test/unittest/: utest_v4l2.cpp
rk3568/camera/src/pipeline_core/: BUILD.gn
rk3568/camera/src/pipeline_core/ipp_algo_example/: ipp_algo_example.c
rk3568/camera/src/pipeline_core/node/: rk_codec_node.cpp  rk_codec_node.h
rk3568/hisi_lib/: BUILD.gn
rk3568/hisi_lib/etc/: bootanimation-800x1280.raw  camera_host_config.hcb  config.c  ipp_algo_config.hcb  mpp_config.hcb  params.c  stream_supported_config.hcb
rk3568/kernel/: BUILD.gn  build_kernel.sh
rk3568/loader/: README.md
rk3568/tools/: README.md  parameter.txt
rk3568/tools/linux/: flash.py
rk3568/tools/windows/: config.cfg
rk3568/tools/windows/DriverAssitant/: README.md
