# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_prebuilt_shared_library("display_gralloc") {
  if (target_cpu == "arm") {
    source = "lib/libdisplay_gralloc.z.so"
  }     
  subsystem_name = "hdf"
  part_name = "hdf"
  install_enable = true
  # output_name = "display_gralloc.z"
}

ohos_prebuilt_shared_library("display_gfx") {
  if (target_cpu == "arm") {
    source = "lib/libdisplay_gfx.z.so"
  }     
  subsystem_name = "hdf"
  part_name = "hdf"
  install_enable = true
  # output_name = "display_gfx.z"
}

ohos_prebuilt_shared_library("display_device") {
  if (target_cpu == "arm") {
    source = "lib/libdisplay_device_drm.z.so"
  }     
  subsystem_name = "hdf"
  part_name = "hdf"
  install_enable = true
  # output_name = "display_device_drm.z"
}

ohos_prebuilt_shared_library("display_layer") {
  if (target_cpu == "arm") {
    source = "lib/libdisplay_layer.z.so"
  }     
  subsystem_name = "hdf"
  part_name = "hdf"
  install_enable = true
  # output_name = "display_device_drm.z"
}
