# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ISP_LIB_DIR = "//device/rockchip/hardware/isp/lib"
ISP_ETC_DIR = "//device/rockchip/hardware/isp/etc"
ISP_BIN_DIR = "//device/rockchip/hardware/isp/bin"

ohos_prebuilt_shared_library("librkaiq") {
  source = "$ISP_LIB_DIR/librkaiq.z.so"
  subsystem_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_etc("gc8034_RK-CMK-8M-2-v1_CK8401") {
  source = "$ISP_ETC_DIR/iqfiles/gc8034_RK-CMK-8M-2-v1_CK8401.json"
  install_images = [ "system" ]
  relative_install_dir = "iqfiles"
  part_name = "rockchip_products"
  install_enable = true
}

ohos_prebuilt_executable("ispserver") {
  source = "$ISP_BIN_DIR/ispserver"
  part_name = "rockchip_products"
  install_enable = true
}

group("isp") {
  deps = [
    ":librkaiq",
    ":gc8034_RK-CMK-8M-2-v1_CK8401",
    ":ispserver",
  ]
}
