# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

GPL_SDK_LIB_DIR = "//device/rockchip/rk3568/hisi_lib/lib"
GPL_SDK_ETC_DIR = "//device/rockchip/rk3568/hisi_lib/etc"

group("hisi_lib") {
  deps = [
    ":libVoiceEngine",
    ":lib_hiacs",
    ":lib_hiae",
    ":lib_hiawb",
    ":lib_hiawb_natura",
    ":lib_hicalcflicker",
    ":lib_hidehaze",
    ":lib_hidrc",
    ":lib_hiir_auto",
    ":lib_hildci",
    ":libaaccomm",
    ":libaacdec",
    ":libaacenc",
    ":libaacsbrdec",
    ":libaacsbrenc",
    ":libdnvqe",
    ":libhdmi",
    ":libhi3516cv500_acodec",
    ":libhi3516cv500_adec",
    ":libhi3516cv500_aenc",
    ":libhi3516cv500_ai",
    ":libhi3516cv500_aio",
    ":libhi3516cv500_ao",
    ":libhi3516cv500_base",
    ":libhi3516cv500_chnl",
    ":libhi3516cv500_dis",
    ":libhi3516cv500_gdc",
    ":libhi3516cv500_h264e",
    ":libhi3516cv500_h265e",
    ":libhi3516cv500_isp",
    ":libhi3516cv500_ive",
    ":libhi3516cv500_jpegd",
    ":libhi3516cv500_jpege",
    ":libhi3516cv500_nnie",
    ":libhi3516cv500_rc",
    ":libhi3516cv500_rgn",
    ":libhi3516cv500_sys",
    ":libhi3516cv500_vdec",
    ":libhi3516cv500_vedu",
    ":libhi3516cv500_venc",
    ":libhi3516cv500_vfmw",
    ":libhi3516cv500_vgs",
    ":libhi3516cv500_vi",
    ":libhi3516cv500_vo",
    ":libhi3516cv500_vpss",
    ":libhi_irq",
    ":libhi_osal",
    ":libhi_sensor_i2c",
    ":libhifisheyecalibrate",
    ":libhive_AEC",
    ":libhive_AGC",
    ":libhive_ANR",
    ":libhive_EQ",
    ":libhive_HPF",
    ":libhive_RES",
    ":libhive_RES_ext",
    ":libhive_common",
    ":libhive_record",
    ":libhive_talkv2",
    ":libhive_wnr",
    ":libisp",
    ":libive",
    ":libmd",
    ":libmpi",
    ":libnnie",
    ":libsdk",
    ":libsecurec",
    ":libsns_imx335",
    ":libtde",
    ":libupvqe",
    ":libaudio_hw",
    ":libaudio_input_port",
    ":libaudio_output_port",
    ":libcamera_hw_platform",
    ":libcodec",
    ":libdtcf",
    ":libexif",
    ":libfileformat",
    ":libformat_hw",
    ":libhiaacdec",
    ":libhitimer",
    ":libmbuf",
    ":libmedia_hal_common",
    ":libmessagehandler",
    ":libmp4",
    ":libmwlog",
    ":libplugin_adec_35xx",
    ":libplugin_aenc_35xx",
    ":libplugin_muxer_recorder",
    ":libplugin_vdec_3516D",
    ":libplugin_venc_35xx",
    ":librecorder_pro",
    ":libts",
    ":libcamera_buffer_manager",
    ":libcamera_device_manager",
    ":libcamera_hdi_impl",
    ":libcamera_ipp_algo_example",
    ":libcamera_pipeline_core",
    ":libcamera_utils",
    ":libdriver_adapter",
    ":libmpp_vbs",
    ":libvb_server",
    ":camera_host_config",
    ":config",
    ":ipp_algo_config",
    ":mpp_config",
    ":params",
    ":stream_supported_config",
    ":bootanimation-800x1280",
  ]
}

ohos_prebuilt_etc("bootanimation-800x1280") {
  source = "$GPL_SDK_ETC_DIR/bootanimation-800x1280.raw"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("params") {
  source = "$GPL_SDK_ETC_DIR/params.c"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("stream_supported_config") {
  source = "$GPL_SDK_ETC_DIR/stream_supported_config.hcb"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("ipp_algo_config") {
  source = "$GPL_SDK_ETC_DIR/ipp_algo_config.hcb"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("mpp_config") {
  source = "$GPL_SDK_ETC_DIR/mpp_config.hcb"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("camera_host_config") {
  source = "$GPL_SDK_ETC_DIR/camera_host_config.hcb"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_etc("config") {
  source = "$GPL_SDK_ETC_DIR/config.c"
  relative_install_dir = "hdfconfig"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libvb_server") {
  source = "$GPL_SDK_LIB_DIR/libvb_server.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmpp_vbs") {
  source = "$GPL_SDK_LIB_DIR/libmpp_vbs.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libdriver_adapter") {
  source = "$GPL_SDK_LIB_DIR/libdriver_adapter.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_utils") {
  source = "$GPL_SDK_LIB_DIR/libcamera_utils.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_pipeline_core") {
  source = "$GPL_SDK_LIB_DIR/libcamera_pipeline_core.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_ipp_algo_example") {
  source = "$GPL_SDK_LIB_DIR/libcamera_ipp_algo_example.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_hdi_impl") {
  source = "$GPL_SDK_LIB_DIR/libcamera_hdi_impl.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_device_manager") {
  source = "$GPL_SDK_LIB_DIR/libcamera_device_manager.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_buffer_manager") {
  source = "$GPL_SDK_LIB_DIR/libcamera_buffer_manager.z.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libts") {
  source = "$GPL_SDK_LIB_DIR/libts.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("librecorder_pro") {
  source = "$GPL_SDK_LIB_DIR/librecorder_pro.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libplugin_venc_35xx") {
  source = "$GPL_SDK_LIB_DIR/libplugin_venc_35xx.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libplugin_vdec_3516D") {
  source = "$GPL_SDK_LIB_DIR/libplugin_vdec_3516D.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libplugin_muxer_recorder") {
  source = "$GPL_SDK_LIB_DIR/libplugin_muxer_recorder.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libplugin_aenc_35xx") {
  source = "$GPL_SDK_LIB_DIR/libplugin_aenc_35xx.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libplugin_adec_35xx") {
  source = "$GPL_SDK_LIB_DIR/libplugin_adec_35xx.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmwlog") {
  source = "$GPL_SDK_LIB_DIR/libmwlog.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmp4") {
  source = "$GPL_SDK_LIB_DIR/libmp4.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmessagehandler") {
  source = "$GPL_SDK_LIB_DIR/libmessagehandler.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmedia_hal_common") {
  source = "$GPL_SDK_LIB_DIR/libmedia_hal_common.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmbuf") {
  source = "$GPL_SDK_LIB_DIR/libmbuf.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhitimer") {
  source = "$GPL_SDK_LIB_DIR/libhitimer.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhiaacdec") {
  source = "$GPL_SDK_LIB_DIR/libhiaacdec.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libformat_hw") {
  source = "$GPL_SDK_LIB_DIR/libformat_hw.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libfileformat") {
  source = "$GPL_SDK_LIB_DIR/libfileformat.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libexif") {
  source = "$GPL_SDK_LIB_DIR/libexif.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libdtcf") {
  source = "$GPL_SDK_LIB_DIR/libdtcf.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcodec") {
  source = "$GPL_SDK_LIB_DIR/libcodec.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libcamera_hw_platform") {
  source = "$GPL_SDK_LIB_DIR/libcamera_hw_platform.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaudio_output_port") {
  source = "$GPL_SDK_LIB_DIR/libaudio_output_port.so"
  subsystem_name = "rockchip_products"
}


ohos_prebuilt_shared_library("libaudio_input_port") {
  source = "$GPL_SDK_LIB_DIR/libaudio_input_port.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaudio_hw") {
  source = "$GPL_SDK_LIB_DIR/libaudio_hw.so"
  subsystem_name = "rockchip_products"
}


ohos_prebuilt_shared_library("libhive_HPF") {
  source = "$GPL_SDK_LIB_DIR/libhive_HPF.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hiawb") {
  source = "$GPL_SDK_LIB_DIR/lib_hiawb.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_AGC") {
  source = "$GPL_SDK_LIB_DIR/libhive_AGC.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_ANR") {
  source = "$GPL_SDK_LIB_DIR/libhive_ANR.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaacdec") {
  source = "$GPL_SDK_LIB_DIR/libaacdec.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhdmi") {
  source = "$GPL_SDK_LIB_DIR/libhdmi.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libive") {
  source = "$GPL_SDK_LIB_DIR/libive.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaacenc") {
  source = "$GPL_SDK_LIB_DIR/libaacenc.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hildci") {
  source = "$GPL_SDK_LIB_DIR/lib_hildci.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hidrc") {
  source = "$GPL_SDK_LIB_DIR/lib_hidrc.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_RES_ext") {
  source = "$GPL_SDK_LIB_DIR/libhive_RES_ext.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmd") {
  source = "$GPL_SDK_LIB_DIR/libmd.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hiacs") {
  source = "$GPL_SDK_LIB_DIR/lib_hiacs.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_wnr") {
  source = "$GPL_SDK_LIB_DIR/libhive_wnr.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libupvqe") {
  source = "$GPL_SDK_LIB_DIR/libupvqe.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hiawb_natura") {
  source = "$GPL_SDK_LIB_DIR/lib_hiawb_natura.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_record") {
  source = "$GPL_SDK_LIB_DIR/libhive_record.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_common") {
  source = "$GPL_SDK_LIB_DIR/libhive_common.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaacsbrenc") {
  source = "$GPL_SDK_LIB_DIR/libaacsbrenc.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libnnie") {
  source = "$GPL_SDK_LIB_DIR/libnnie.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaaccomm") {
  source = "$GPL_SDK_LIB_DIR/libaaccomm.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_EQ") {
  source = "$GPL_SDK_LIB_DIR/libhive_EQ.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hiir_auto") {
  source = "$GPL_SDK_LIB_DIR/lib_hiir_auto.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libisp") {
  source = "$GPL_SDK_LIB_DIR/libisp.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libsecurec") {
  source = "$GPL_SDK_LIB_DIR/libsecurec.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hidehaze") {
  source = "$GPL_SDK_LIB_DIR/lib_hidehaze.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libmpi") {
  source = "$GPL_SDK_LIB_DIR/libmpi.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_talkv2") {
  source = "$GPL_SDK_LIB_DIR/libhive_talkv2.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_RES") {
  source = "$GPL_SDK_LIB_DIR/libhive_RES.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hicalcflicker") {
  source = "$GPL_SDK_LIB_DIR/lib_hicalcflicker.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libaacsbrdec") {
  source = "$GPL_SDK_LIB_DIR/libaacsbrdec.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libsns_imx335") {
  source = "$GPL_SDK_LIB_DIR/libsns_imx335.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("lib_hiae") {
  source = "$GPL_SDK_LIB_DIR/lib_hiae.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhifisheyecalibrate") {
  source = "$GPL_SDK_LIB_DIR/libhifisheyecalibrate.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhive_AEC") {
  source = "$GPL_SDK_LIB_DIR/libhive_AEC.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libdnvqe") {
  source = "$GPL_SDK_LIB_DIR/libdnvqe.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libtde") {
  source = "$GPL_SDK_LIB_DIR/libtde.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libVoiceEngine") {
  source = "$GPL_SDK_LIB_DIR/libVoiceEngine.so"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_acodec") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_acodec.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_adec") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_adec.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_aenc") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_aenc.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_aio") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_aio.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_ai") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_ai.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_ao") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_ao.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_base") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_base.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_chnl") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_chnl.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_dis") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_dis.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_gdc") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_gdc.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_h264e") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_h264e.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_h265e") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_h265e.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_isp") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_isp.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_ive") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_ive.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_jpegd") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_jpegd.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_jpege") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_jpege.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_nnie") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_nnie.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_rc") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_rc.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_rgn") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_rgn.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_sys") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_sys.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vdec") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vdec.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vedu") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vedu.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_venc") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_venc.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vfmw") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vfmw.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vgs") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vgs.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vi") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vi.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vo") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vo.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi3516cv500_vpss") {
  source = "$GPL_SDK_LIB_DIR/libhi3516cv500_vpss.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi_irq") {
  source = "$GPL_SDK_LIB_DIR/libhi_irq.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi_osal") {
  source = "$GPL_SDK_LIB_DIR/libhi_osal.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libhi_sensor_i2c") {
  source = "$GPL_SDK_LIB_DIR/libhi_sensor_i2c.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}

ohos_prebuilt_shared_library("libsdk") {
  source = "$GPL_SDK_LIB_DIR/libsdk.so"
  subsystem_name = "rockchip_products"
  part_name = "rockchip_products"
}
