# Copyright (c) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/clang/clang.gni")
kernel_build_script_dir = "//kernel/linux/linux-4.19"
kernel_source_dir = "//kernel/linux/linux-4.19"

action("kernel") {
   script = "build_kernel.sh"
   sources = [ kernel_source_dir ]

   product_path = "vendor/$product_company/$product_name"
   outputs = [ "$root_build_dir/packages/phone/images" ]
   args = [
    rebase_path(kernel_build_script_dir, root_build_dir),
    rebase_path("$root_build_dir/packages/phone/images"),
    rebase_path("//device/rockchip/$device_name"),
    product_path,
  ]
}


